# wandos

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ap_boot.asm  ap_utils.asm  boot.asm  build_wsl.sh  coding_standards.md  linker.ld  rootfs.asm  run.sh
.github/workflows/: cmake-single-platform.yml
arch/: CMakeLists.txt
arch/x86/: CMakeLists.txt  apic.cpp  cpu.cpp  gdt.cpp  gdt_load.asm  idt.cpp  interrupt.asm  interrupt.cpp  interrupt_names.c  paging_asm.asm  pic8259.cpp  segment_fault.cpp  smp.cpp  spinlock.cpp
boot/: grub.cfg
doc/: loading.md  streamlining.puml
drivers/: CMakeLists.txt  block_device.cpp  console_device.cpp  ext2.cpp  keyboard.cpp
include/arch/x86/: apic.h  atomic.h  cpu.h  gdt.h  idt.h  interrupt.h  interrupt_controller.h  paging.h  percpu.h  pic8259.h  smp.h  spinlock.h
include/drivers/: block_device.h  ext2.h  keyboard.h
include/kernel/: buddy_allocator.h  console_device.h  cpio.h  dirent.h  elf_loader.h  kernel.h  kernel_memory.h  list.h  memfs.h  process.h  scheduler.h  slab_allocator.h  smp_scheduler.h  syscall.h  syscall_user.h  user_memory.h  vfs.h  virtual_memory_tree.h  zone.h
include/kernel/fs/: PageCache.h  SimplePageCache.h
include/lib/: console.h  debug.h  ioport.h  log_buffer.h  mutex.h  serial.h  string.h  test_framework.h  time.h
kernel/: CMakeLists.txt
kernel/core/: CMakeLists.txt  kernel.cpp  main.cpp  syscall.cpp
kernel/fs/: CMakeLists.txt  SimplePageCache.cpp  console_device.cpp  memfs.cpp  vfs.cpp
kernel/memory/: CMakeLists.txt  buddy_allocator.cpp  kernel_memory.cpp  memory_operators.cpp  paging.cpp  slab_allocator.cpp  user_memory.cpp  virtual_memory_tree.cpp  zone.cpp
kernel/process/: CMakeLists.txt  elf_loader.cpp  elf_loader_reloc.cpp  exit_handler.cpp  process.cpp  process_manager.cpp  process_wrapper.cpp  scheduler.cpp
kernel/smp/: CMakeLists.txt  smp_scheduler.cpp
lib/: CMakeLists.txt  console.cpp  debug.cpp  debug_test.cpp  log_buffer.cpp  mutex.cpp  serial.cpp  string.cpp
rootfs/: CMakeLists.txt  commands.cpp  commands.h  init.asm  init.cpp  linker.ld  utils.cpp  utils.h
rootfs/binary/: init
rootfs/binary/test_dir/: 1.txt
rootfs/cmds/: cat.cpp  cd.cpp  echo.cpp  find.cpp  ls.cpp  rm.cpp  xxd.cpp
tests/: CMakeLists.txt  format_string_test.cpp  hexdump_test.cpp
tools/: cpio_fs.sh  create_disk.sh  make_initramfs.py
